@@ -212,16 +212,15 @@ ul.problems a {
   text-decoration: none;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 }
-ul.problems li:not(.current) a:hover {
+ul.problems a:active {
   background: -webkit-gradient(linear, left top, left bottom,
-                                      from(#bcbcbc), to(#a2a2a2));
-  background: -webkit-linear-gradient(top, #bcbcbc,     #a2a2a2);
-  background:         linear-gradient(top, #bcbcbc,     #a2a2a2);
-  border-top-color: #a9a9a9;
-  border-bottom-color: #9c9c9c;
-    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5);
-  box-shadow:           inset 0 1px 0 rgba(255, 255, 255, 0.5);
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
+                                      from(#dcdcdc), to(#c2c2c2));
+  background: -webkit-linear-gradient(top, #dcdcdc,     #c2c2c2);
+  background:         linear-gradient(top, #dcdcdc,     #c2c2c2);
+  border-top-color: #b0b0b0;
+  border-bottom-color: #c2c2c2;
+    -webkit-box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.25);
+  box-shadow:           inset 0 4px 8px rgba(0, 0, 0, 0.25);
 }
 ul.problems li.current a {
   background: -webkit-gradient(linear, left top, left bottom,
@@ -255,10 +254,11 @@ ul.problems pre {
   background: -webkit-gradient(linear, left top, left bottom,
     from(           rgba(255, 255, 255, 0.25)),
     color-stop(0.5, rgba(255, 255, 255, 0.2 )),
-    color-stop(0.5, rgba(255, 255, 255, 0.15)),
-    to(             rgba(255, 255, 255, 0.1 )));
-  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.25), 0.5 rgba(255, 255, 255, 0.2), 0.5 rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.1));
-  background:         linear-gradient(top, rgba(255, 255, 255, 0.25), 0.5 rgba(255, 255, 255, 0.2), 0.5 rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.1));
+    color-stop(0.5, rgba(255, 255, 255, 0.1 )),
+    to(             rgba(255, 255, 255, 0.05)));
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.25), 0.5 rgba(255, 255, 255, 0.2), 0.5 rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
+  background:         linear-gradient(top, rgba(255, 255, 255, 0.25), 0.5 rgba(255, 255, 255, 0.2), 0.5 rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
+  background-color: #ddd;
   border: 1px solid rgba(0, 0, 0, 0.05);
     -webkit-border-radius: 4px;
   border-radius:           4px;
@@ -267,6 +267,17 @@ ul.problems pre {
   font-family: Monaco, monospace;
   font-size: 12px;
   text-overflow: ellipsis;
+    -webkit-transition: background-color 0.15s linear;
+  transition:           background-color 0.15s linear;
+}
+ul.problems a:hover pre,
+ul.problems a:focus pre {
+  background-color: #e6e6e6;
+}
+ul.problems a:active pre {
+  background-color: #c0c0c0;
+    -webkit-transition: none;
+  transition:           none;
 }
 ul.problems li.current a pre {
   background: -webkit-gradient(linear, left top, left bottom,
@@ -279,4 +290,6 @@ ul.problems li.current a pre {
   border-color: rgba(0, 0, 0, 0.05);
     -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15);
   box-shadow:           0 1px 0 rgba(255, 255, 255, 0.15);
+    -webkit-transition: none;
+  transition:           none;
 }
